[tool.poetry]
name = "pytorchtutorial"
version = "0.1.0"
description = ""
authors = ["Hiroto_Takegawa <h_takegawa@pkshatech.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5"
torchvision = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
